可以添加BaseObject，且可以select

--- a/config.properties
+++ b/config.properties
@@ -7,8 +7,21 @@ bo.bgColor=DDDDDD
 bo.bdColor=000000
 # The padding that encloses the component
 bo.boxpadding=5
-# UseCaseComponent DefaultName
+# Connection Port Size
+bo.connectionPortSize = 10
+
+# UseCaseComponent default name
 bo.UCC.name=Use Case
+# UseCaseComponent default size
+bo.UCC.width=250
+bo.UCC.height=150
+
+# ClassComponent default name
+bo.CC.name=Class
+# ClassComponent default size
+bo.CC.width=150
+bo.CC.height=200
+
 
 
 ################
