所有功能完成

--- a/config.properties
+++ b/config.properties
@@ -23,8 +23,23 @@ bo.CC.width=150
 bo.CC.height=200
 
 
+#####################
+## Connection Line ##
+#####################
+cl.boxpadding = 8
+
 
 ################
 ##    Area    ##
 ################
 area.padding=10
+
+
+#####################
+##  Control Panel  ##
+#####################
+
+cp.bt.bgColor=E9E9E9
+cp.bt.selected.bgColor=666666
+cp.bt.size=40
+cp.bt.icon.size=30
