refactor: 更改目錄架構 fix: 按鈕按下去會有藍色背景溢出，改為灰色

--- a/src/main/config.properties
+++ b/src/main/config.properties
@@ -40,6 +40,7 @@ area.padding=10
 #####################
 
 cp.bt.bgColor=E9E9E9
-cp.bt.selected.bgColor=666666
+cp.bt.selected.bgColor=888888
+cp.bt.pressed.bgColor=666666
 cp.bt.size=40
 cp.bt.icon.size=30
