feat: 添加 properties 的選項，可以控制 Line 是否要黏住 port

--- a/src/main/config.properties
+++ b/src/main/config.properties
@@ -8,7 +8,7 @@ bo.bdColor=000000
 # The padding that encloses the component
 bo.boxpadding=5
 # Connection Port Size
-bo.connectionPortSize = 10
+bo.connectionPortSize=10
 
 # UseCaseComponent default name
 bo.UCC.name=Use Case
@@ -23,10 +23,19 @@ bo.CC.width=150
 bo.CC.height=200
 
 
-#####################
-## Connection Line ##
-#####################
-cl.boxpadding = 10
+################
+##    line    ##
+################
+line.boxpadding=10
+
+
+###################
+##  Select Area  ##
+###################
+sa.color.alpha=85
+sa.color.r=37
+sa.color.g=148
+sa.color.b=216
 
 
 ################
@@ -44,3 +53,9 @@ cp.bt.selected.bgColor=888888
 cp.bt.pressed.bgColor=666666
 cp.bt.size=40
 cp.bt.icon.size=30
+
+################
+##    Mode    ##
+################
+# 新增線時，是否讓其 HEAD 自動黏住最近的 Port
+mode.line.stickToPort=true
