--- a/src/main/config.properties
+++ b/src/main/config.properties
@@ -26,7 +26,7 @@ bo.CC.height=200
 ################
 ##    line    ##
 ################
-line.boxpadding=10
+line.boxpadding=20
 
 
 ###################
@@ -58,4 +58,4 @@ cp.bt.icon.size=30
 ##    Mode    ##
 ################
 # 新增線時，是否讓其 HEAD 自動黏住最近的 Port
-mode.line.stickToPort=true
+mode.line.stickToPort=false
