feat: 添加懸浮文字提示框 feat: 添加左側按鈕被滑鼠覆蓋時會變色

--- a/src/main/config.properties
+++ b/src/main/config.properties
@@ -44,18 +44,14 @@ sa.color.b=216
 area.padding=10
 
 
-#####################
-##  Control Panel  ##
-#####################
-
-cp.bt.bgColor=E9E9E9
-cp.bt.selected.bgColor=888888
-cp.bt.pressed.bgColor=666666
-cp.bt.size=40
-cp.bt.icon.size=30
-
 ################
 ##    Mode    ##
 ################
 # 新增線時，是否讓其 HEAD 自動黏住最近的 Port
 mode.line.stickToPort=false
+mode.bt.bgColor=E9E9E9
+mode.bt.selected.bgColor=888888
+mode.bt.hovered.bgColor=AAAAAA
+mode.bt.pressed.bgColor=666666
+mode.bt.size=40
+mode.bt.icon.size=30
